syntax = "proto3";

package com.goodcover.fdb.record.es.proto;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  preserve_unknown_fields: false
};


message PersistentRepr {
  string persistenceId = 1;
  int64 sequenceNr = 2;
  int64 timestamp = 3;
  repeated string tags = 4;
  bytes payload = 5;
  optional int32 serializationId = 6;
  optional string serializationManifest = 7;
  map<string, string> metadata = 8;
}

message Snapshot {
  string persistenceId = 1;
  int64 sequenceNr = 2;
  int64 timestamp = 3;
  bytes payload = 4;
  optional int32 serializationId = 5;
  optional string serializationManifest = 6;
  map<string, string> metadata = 7;
}

message RecordTypeUnion {
  PersistentRepr _PersistentRepr = 1;
  Snapshot _Snapshot = 2;
}
